# pokemon_cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/: agent.py  battle.py  cli.py  comparison.py  llm.py  models.py  pokeapi.py  prompts.py  render.py  tools.py
src/app/: __init__.py  agent.py  battle.py  cli.py  comparison.py  config.py  llm.py  pokeapi.py  render.py  tools.py
tests/: conftest.py  test_battle.py  test_cli.py  test_models.py  test_pokeapi.py  test_tools.py
