[project]
name = "pokemon-professor"
version = "0.1.0"
description = "An agentic Pokédex for the terminal"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Gonzalo Ayuso", email = "gonzalo123@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
    "langchain>=1.0,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "rich>=13.9,<15",
]

[project.optional-dependencies]
bedrock = [
    "langchain-aws>=1.0,<2",
]
dev = [
    "pytest>=8.3,<10",
    "ruff>=0.9,<1",
]

[project.scripts]
pokemon-professor = "app.cli:cli"

[project.urls]
Homepage = "https://github.com/gonzalo123/pokemon-professor"
Repository = "https://github.com/gonzalo123/pokemon-professor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
